--- a/prepros.config
+++ b/prepros.config
@@ -942,6 +942,17 @@
         "config": {
           "autoCompile": false
         }
+      },
+      {
+        "file": "Homework/luxtrader/#source/js/main.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            }
+          },
+          "autoCompile": true
+        }
       }
     ]
   }
